src/components/_homepage/testimonials.module.scss
@import '../../base/module';

.wrapper {
  display: flex;
  flex-direction: column-reverse;
  justify-content: space-between;
  align-items: center;
  gap: 40px;

  @media (min-width: 800px) {
    flex-direction: row-reverse;
    padding: 0 15px;
  }
}
.background {
  background-color: $color-darkgreen;
  position: relative;
  padding: 80px 0;
  margin-bottom: 80px;

  &::before {
    content: '';
    position: absolute;
    right: -1%;
    bottom: 0;
    z-index: 1;
    width: 323px;
    height: 480px;
    background-color: $color-greylt;
    mask: url('../../images/palm.svg') no-repeat 100% 100%;
    mask-size: contain;
    transform: rotate(-180deg) translateX(0%) translateY(-70%);
  }
}

.image {
  width: 350px;
  @media (min-width: $tablet) {
    width: 400px;
  }
}

.textWrapper {
  display: flex;
  flex-direction: column;
  gap: 30px;

  .quotesHead {
    font-size: 1.29em;
    font-family: $font-secondary;

    line-height: 1.62rem;
    letter-spacing: 0.15rem;
  }

  .quotesHead p {
    text-transform: uppercase;
    font-weight: 600;
  }

  .quotesHead h2 {
    font-family: $font-header;
    font-size: 3.25em;
    font-style: italic;
    font-weight: 400;
  }

  .quoteWrap {
    max-width: 0;
    width: 0;
    visibility: hidden;
    position: relative;
    display: none;
    min-height: 370px;
    font-size: 0.75em;

    p {
      font-size: 1.3em;
      @media (min-width: $tablet) {
        width: 95%;
      }
    }

    @media (min-width: $desktop) {
      p {
        font-size: 1.56em;
      }
    }
  }

  .quoteWrapActive {
    @extend .quoteWrap;
    max-width: 100%;
    width: 100%;
    visibility: visible;
    display: flex;
    flex-direction: column;
    gap: 24px;
    flex: 1;

    @media (min-width: $desktop) {
      gap: 40px;
    }
  }

  .author {
    line-height: 108%;
    font-family: $font-secondary;
    font-weight: 600;
    text-align: center;
    letter-spacing: 0.04em;
    color: $color-black;
    text-align: left;
    background-color: $color-darkgreen;
    border-radius: $bradius;
    text-transform: uppercase;
    font-size: 1.25rem;

    @media (min-width: $desktop) {
      font-size: 1.5rem;
    }
  }

  .controlWrap {
    display: flex;
    width: 100%;
    gap: 10px;
    @media (min-width: $desktop) {
      gap: 15px;
    }
  }

  .quoteControls {
    display: flex;
    justify-content: flex-start;
    gap: 20px;
    align-items: center;

    font-size: 1.25em;
    border-radius: $bradius 0 0 $bradius;
    line-height: 1.5em;
    @media (min-width: $desktop) {
      padding: 0px;
    }

    .dotList {
      display: flex;
      gap: 5px;
      align-items: center;

      > div {
        width: 15px;
        height: 15px;
        border: 1px solid $color-black;
        border-radius: 99em;

        &.activeDot {
          background: $color-forestgreen;
        }
      }
    }
  }

  .nextBtn {
    display: flex;
    align-items: center;
    justify-content: flex-start;
    width: 50px;
    border-radius: 0 $bradius $bradius 0;
    color: $color-forestgreen;
    cursor: pointer;

    svg {
      font-size: 26px;
    }
    @media (min-width: $desktop) {
    }
  }

  .counter {
    font-size: 1.25rem;
    font-family: $font-secondary;
  }
}

